--- a/flower/static/css/bootstrap.css
+++ b/flower/static/css/bootstrap.css
@@ -140,11 +140,11 @@ body {
   background-color: #ffffff;
 }
 a {
-  color: #348613;
+  color: darkgrey;
   text-decoration: none;
 }
 a:hover {
-  color: #59b833;
+  color: #darkgrey;
   text-decoration: underline;
 }
 .row {
@@ -638,7 +638,7 @@ a.badge:hover {
 }
 .label-success,
 .badge-success {
-  background-color: #468847;
+  background-color: green;
 }
 .label-success[href],
 .badge-success[href] {
@@ -676,7 +676,7 @@ table {
   line-height: 18px;
   text-align: left;
   vertical-align: top;
-  border-top: 1px solid #c7ecb8;
+  border-top: 1px solid grey;
 }
 .table th {
   font-weight: bold;
@@ -693,14 +693,14 @@ table {
   border-top: 0;
 }
 .table tbody + tbody {
-  border-top: 2px solid #c7ecb8;
+  border-top: 2px solid grey;
 }
 .table-condensed th,
 .table-condensed td {
   padding: 4px 5px;
 }
 .table-bordered {
-  border: 1px solid #c7ecb8;
+  border: 1px solid grey;
   border-collapse: separate;
   *border-collapse: collapsed;
   border-left: 0;
@@ -710,7 +710,7 @@ table {
 }
 .table-bordered th,
 .table-bordered td {
-  border-left: 1px solid #c7ecb8;
+  border-left: 1px solid grey;
 }
 .table-bordered caption + thead tr:first-child th,
 .table-bordered caption + tbody tr:first-child th,
@@ -752,7 +752,7 @@ table {
 }
 .table-striped tbody tr:nth-child(odd) td,
 .table-striped tbody tr:nth-child(odd) th {
-  background-color: #f0ffeb;
+  background-color: ghostwhite;
 }
 .table tbody tr:hover td,
 .table tbody tr:hover th {
@@ -1233,15 +1233,15 @@ input[type="checkbox"][readonly] {
 .control-group.success > label,
 .control-group.success .help-block,
 .control-group.success .help-inline {
-  color: #468847;
+  color: darkgrey;
 }
 .control-group.success .checkbox,
 .control-group.success .radio,
 .control-group.success input,
 .control-group.success select,
 .control-group.success textarea {
-  color: #468847;
-  border-color: #468847;
+  color: darkgrey;
+  border-color: darkgrey;
 }
 .control-group.success .checkbox:focus,
 .control-group.success .radio:focus,
@@ -1255,9 +1255,9 @@ input[type="checkbox"][readonly] {
 }
 .control-group.success .input-prepend .add-on,
 .control-group.success .input-append .add-on {
-  color: #468847;
+  color: darkgrey;
   background-color: #dff0d8;
-  border-color: #468847;
+  border-color: darkgrey;
 }
 input:focus:required:invalid,
 textarea:focus:required:invalid,
@@ -1694,14 +1694,14 @@ legend + .control-group {
 }
 .btn-primary {
   background-color: #288613;
-  background-image: -moz-linear-gradient(top, #348613, #178613);
-  background-image: -ms-linear-gradient(top, #348613, #178613);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#348613), to(#178613));
-  background-image: -webkit-linear-gradient(top, #348613, #178613);
-  background-image: -o-linear-gradient(top, #348613, #178613);
-  background-image: linear-gradient(top, #348613, #178613);
+  background-image: -moz-linear-gradient(top, darkgrey, #178613);
+  background-image: -ms-linear-gradient(top, darkgrey, #178613);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(darkgrey), to(#178613));
+  background-image: -webkit-linear-gradient(top, darkgrey, #178613);
+  background-image: -o-linear-gradient(top, darkgrey, #178613);
+  background-image: linear-gradient(top, darkgrey, #178613);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#348613', endColorstr='#178613', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='darkgrey', endColorstr='#178613', GradientType=0);
   border-color: #178613 #178613 #0c4309;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   *background-color: #178613;
@@ -2544,7 +2544,7 @@ input[type="submit"].btn.btn-mini {
 .nav-list > .active > a:hover {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
-  background-color: #348613;
+  background-color: darkgrey;
 }
 .nav-list [class^="icon-"] {
   margin-right: 2px;
@@ -2622,7 +2622,7 @@ input[type="submit"].btn.btn-mini {
 .nav-pills > .active > a,
 .nav-pills > .active > a:hover {
   color: #ffffff;
-  background-color: #348613;
+  background-color: darkgrey;
 }
 .nav-stacked > li {
   float: none;
@@ -2671,14 +2671,14 @@ input[type="submit"].btn.btn-mini {
 }
 .nav-tabs .dropdown-toggle .caret,
 .nav-pills .dropdown-toggle .caret {
-  border-top-color: #348613;
-  border-bottom-color: #348613;
+  border-top-color: darkgrey;
+  border-bottom-color: darkgrey;
   margin-top: 6px;
 }
 .nav-tabs .dropdown-toggle:hover .caret,
 .nav-pills .dropdown-toggle:hover .caret {
-  border-top-color: #59b833;
-  border-bottom-color: #59b833;
+  border-top-color: #darkgrey;
+  border-bottom-color: #darkgrey;
 }
 .nav-tabs .active .dropdown-toggle .caret,
 .nav-pills .active .dropdown-toggle .caret {
@@ -2812,15 +2812,15 @@ input[type="submit"].btn.btn-mini {
   min-height: 40px;
   padding-left: 20px;
   padding-right: 20px;
-  background-color: #81a64f;
-  background-image: -moz-linear-gradient(top, #5b8933, #bad279);
-  background-image: -ms-linear-gradient(top, #5b8933, #bad279);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#5b8933), to(#bad279));
-  background-image: -webkit-linear-gradient(top, #5b8933, #bad279);
-  background-image: -o-linear-gradient(top, #5b8933, #bad279);
-  background-image: linear-gradient(top, #5b8933, #bad279);
+  background-color: #16181c;
+  background-image: -moz-linear-gradient(top, #16181c, grey);
+  background-image: -ms-linear-gradient(top, #16181c, grey);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#16181c), to(grey));
+  background-image: -webkit-linear-gradient(top, #16181c, grey);
+  background-image: -o-linear-gradient(top, #16181c, grey);
+  background-image: linear-gradient(top, #16181c, grey);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#5b8933', endColorstr='#bad279', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#16181c', endColorstr='grey', GradientType=0);
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -3016,15 +3016,15 @@ input[type="submit"].btn.btn-mini {
 .navbar .nav .active > a:hover {
   color: #ffffff;
   text-decoration: none;
-  background-color: #bad279;
+  background-color: grey;
 }
 .navbar .divider-vertical {
   height: 40px;
   width: 1px;
   margin: 0 9px;
   overflow: hidden;
-  background-color: #bad279;
-  border-right: 1px solid #5b8933;
+  background-color: grey;
+  border-right: 1px solid #16181c;
 }
 .navbar .nav.pull-right {
   margin-left: 10px;
@@ -3036,18 +3036,18 @@ input[type="submit"].btn.btn-mini {
   padding: 7px 10px;
   margin-left: 5px;
   margin-right: 5px;
-  background-color: #81a64f;
-  background-image: -moz-linear-gradient(top, #5b8933, #bad279);
-  background-image: -ms-linear-gradient(top, #5b8933, #bad279);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#5b8933), to(#bad279));
-  background-image: -webkit-linear-gradient(top, #5b8933, #bad279);
-  background-image: -o-linear-gradient(top, #5b8933, #bad279);
-  background-image: linear-gradient(top, #5b8933, #bad279);
+  background-color: #16181c;
+  background-image: -moz-linear-gradient(top, #16181c, grey);
+  background-image: -ms-linear-gradient(top, #16181c, grey);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#16181c), to(grey));
+  background-image: -webkit-linear-gradient(top, #16181c, grey);
+  background-image: -o-linear-gradient(top, #16181c, grey);
+  background-image: linear-gradient(top, #16181c, grey);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#5b8933', endColorstr='#bad279', GradientType=0);
-  border-color: #bad279 #bad279 #9cbf40;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#16181c', endColorstr='grey', GradientType=0);
+  border-color: grey grey #9cbf40;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  *background-color: #bad279;
+  *background-color: grey;
   /* Darken IE7 buttons by default so they stand out more given they won't have borders */
 
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
@@ -3060,7 +3060,7 @@ input[type="submit"].btn.btn-mini {
 .navbar .btn-navbar.active,
 .navbar .btn-navbar.disabled,
 .navbar .btn-navbar[disabled] {
-  background-color: #bad279;
+  background-color: grey;
   *background-color: #b0cc66;
 }
 .navbar .btn-navbar:active,
@@ -3323,7 +3323,7 @@ input[type="submit"].btn.btn-mini {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 a.thumbnail:hover {
-  border-color: #348613;
+  border-color: darkgrey;
   -webkit-box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
   -moz-box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
   box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
@@ -3360,7 +3360,7 @@ a.thumbnail:hover {
 .alert-success {
   background-color: #dff0d8;
   border-color: #d6e9c6;
-  color: #468847;
+  color: darkgrey;
 }
 .alert-danger,
 .alert-error {
@@ -3955,7 +3955,7 @@ a.thumbnail:hover {
 .dropdown-menu .active > a:hover {
   color: #ffffff;
   text-decoration: none;
-  background-color: #348613;
+  background-color: darkgrey;
 }
 .open {
   *z-index: 1000;
@@ -4847,7 +4847,7 @@ button.close {
   }
   .nav-collapse .nav > li > a:hover,
   .nav-collapse .dropdown-menu a:hover {
-    background-color: #bad279;
+    background-color: grey;
   }
   .nav-collapse.in .btn-group {
     margin-top: 5px;
@@ -4883,8 +4883,8 @@ button.close {
     float: none;
     padding: 9px 15px;
     margin: 9px 0;
-    border-top: 1px solid #bad279;
-    border-bottom: 1px solid #bad279;
+    border-top: 1px solid grey;
+    border-bottom: 1px solid grey;
     -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 0 rgba(255,255,255,.1);
     -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 0 rgba(255,255,255,.1);
     box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 0 rgba(255,255,255,.1);
