--- a/flower/static/css/flower.css
+++ b/flower/static/css/flower.css
@@ -181,7 +181,7 @@
   border-color: #d6e9c6;
 }
 .panel-success .panel-heading {
-  color: #468847;
+  color: darkgrey;
   background-color: #dff0d8;
   border-color: #d6e9c6;
 }
