--- a/flower/static/css/jquery.dataTables.css
+++ b/flower/static/css/jquery.dataTables.css
@@ -19,14 +19,14 @@ table.dataTable {
   table.dataTable thead th,
   table.dataTable thead td {
     padding: 10px 18px;
-    border-bottom: 1px solid #c7ecb8; }
+    border-bottom: 1px solid #grey; }
     table.dataTable thead th:active,
     table.dataTable thead td:active {
       outline: none; }
   table.dataTable tfoot th,
   table.dataTable tfoot td {
     padding: 10px 18px 6px 18px;
-    border-top: 1px solid #c7ecb8; }
+    border-top: 1px solid #grey; }
   table.dataTable thead .sorting,
   table.dataTable thead .sorting_asc,
   table.dataTable thead .sorting_desc {
@@ -52,22 +52,22 @@ table.dataTable {
   table.dataTable tbody tr {
     background-color: white; }
     table.dataTable tbody tr.selected {
-      background-color: #f0ffeb; }
+      background-color: #grey; }
   table.dataTable tbody th,
   table.dataTable tbody td {
     padding: 8px 10px; }
   table.dataTable.row-border tbody th, table.dataTable.row-border tbody td, table.dataTable.display tbody th, table.dataTable.display tbody td {
-    border-top: 1px solid #c7ecb8; }
+    border-top: 1px solid #grey; }
   table.dataTable.row-border tbody tr:first-child th,
   table.dataTable.row-border tbody tr:first-child td, table.dataTable.display tbody tr:first-child th,
   table.dataTable.display tbody tr:first-child td {
     border-top: none; }
   table.dataTable.cell-border tbody th, table.dataTable.cell-border tbody td {
-    border-top: 1px solid #c7ecb8;
-    border-right: 1px solid #c7ecb8; }
+    border-top: 1px solid #grey;
+    border-right: 1px solid #grey; }
   table.dataTable.cell-border tbody tr th:first-child,
   table.dataTable.cell-border tbody tr td:first-child {
-    border-left: 1px solid #c7ecb8; }
+    border-left: 1px solid #grey; }
   table.dataTable.cell-border tbody tr:first-child th,
   table.dataTable.cell-border tbody tr:first-child td {
     border-top: none; }
@@ -128,7 +128,7 @@ table.dataTable {
   table.dataTable.display tbody tr:hover.selected > .sorting_3, table.dataTable.order-column.hover tbody tr:hover.selected > .sorting_3 {
     background-color: #e0eedc; }
   table.dataTable.no-footer {
-    border-bottom: 1px solid #c7ecb8; }
+    border-bottom: 1px solid #grey; }
   table.dataTable.nowrap th, table.dataTable.nowrap td {
     white-space: nowrap; }
   table.dataTable.compact thead th,
@@ -264,19 +264,19 @@ table.dataTable td {
         box-shadow: none; }
       .dataTables_wrapper .dataTables_paginate .paginate_button:hover {
         color: white !important;
-        border: 1px solid #468847;
+        border: 1px solid darkgrey;
         background-color: #95c895;
-        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #95c895), color-stop(100%, #468847));
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #95c895), color-stop(100%, darkgrey));
         /* Chrome,Safari4+ */
-        background: -webkit-linear-gradient(top, #95c895 0%, #468847 100%);
+        background: -webkit-linear-gradient(top, #95c895 0%, darkgrey 100%);
         /* Chrome10+,Safari5.1+ */
-        background: -moz-linear-gradient(top, #95c895 0%, #468847 100%);
+        background: -moz-linear-gradient(top, #95c895 0%, darkgrey 100%);
         /* FF3.6+ */
-        background: -ms-linear-gradient(top, #95c895 0%, #468847 100%);
+        background: -ms-linear-gradient(top, #95c895 0%, darkgrey 100%);
         /* IE10+ */
-        background: -o-linear-gradient(top, #95c895 0%, #468847 100%);
+        background: -o-linear-gradient(top, #95c895 0%, darkgrey 100%);
         /* Opera 11.10+ */
-        background: linear-gradient(to bottom, #95c895 0%, #468847 100%);
+        background: linear-gradient(to bottom, #95c895 0%, darkgrey 100%);
         /* W3C */ }
       .dataTables_wrapper .dataTables_paginate .paginate_button:active {
         outline: none;
@@ -334,7 +334,7 @@ table.dataTable td {
         margin: 0 !important;
         padding: 0 !important; }
   .dataTables_wrapper.no-footer .dataTables_scrollBody {
-    border-bottom: 1px solid #c7ecb8; }
+    border-bottom: 1px solid #grey; }
   .dataTables_wrapper.no-footer div.dataTables_scrollHead table,
   .dataTables_wrapper.no-footer div.dataTables_scrollBody table {
     border-bottom: none; }
